# VanStore

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: test.py
backend/apps/cart/: models.py  selector.py  serializer.py  urls.py  views.py
backend/apps/cart/services/: cart.py
backend/apps/files/: models.py  selector.py  serializer.py  urls.py  views.py
backend/apps/products/: admin.py  models.py  selector.py  serializer.py  urls.py  views.py
backend/apps/products/services/: device.py
backend/apps/users/: admin.py  models.py  serializer.py  urls.py  views.py
backend/apps/users/services/: user_process.py
backend/config/: urls.py
backend/config/django/: base.py
backend/utils/: base_models.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/Auth/Login/: Login.css  Login.js
frontend/src/components/Auth/Login/Old/: Login_old.css  Login_old.js
frontend/src/components/Auth/Reg/: Reg.css  Reg.js
frontend/src/components/Cart/: Cart.css  Cart.js
frontend/src/components/Details/: Details.css  Details.js  Product.js  ProductDetail.js
frontend/src/components/Home/: Home.js  home.css
frontend/src/components/Navbar/: Navbar.js  navbar.css
frontend/src/context/: AuthContext.js
